--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 fcrepo_version: 5.1.0
 fcrepo_user: "{{ tomcat8_server_user }}"
-fcrepo_data_dir: /var/lib/tomcat8/fcrepo4-data
+fcrepo_data_dir: /omega/fcrepo4-data
 fcrepo_binary_directory: "{{ fcrepo_data_dir}}/binaries"
 fcrepo_war_path: "{{ tomcat8_home }}/webapps/fcrepo.war"
 fcrepo_home_dir: /opt/fcrepo
